--- a/web-admin/index.html
+++ b/web-admin/index.html
@@ -138,8 +138,10 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                 <i class="fa fa-angle-left pull-right"></i>
                 </a>
                 <ul class="treeview-menu">
-                  <li><a href="grids.html"><i class="fa fa-angle-right"></i> Grids</a></li>
-                  <li><a href="media.html"><i class="fa fa-angle-right"></i> Media Css</a></li>
+                  <li><a href="nv.html"><i class="fa fa-angle-right"></i> NV</a></li>
+                  <li><a href="dsnv.html"><i class="fa fa-angle-right"></i> DS NV</a></li>
+                  <li><a href="kh.html"><i class="fa fa-angle-right"></i> User</a></li>
+                  <li><a href="dskh.html"><i class="fa fa-angle-right"></i> DS User</a></li>
                 </ul>
               </li>
               <li class="treeview">
